--- a/style.css
+++ b/style.css
@@ -29,16 +29,47 @@
     color: hsl(220, 14%, 75%);
     align-items: center;
 }
+
 .navs h3{
     color: hsl(0, 0%, 0%);
     font-weight: 700;
 }
+
 .navbar ul{
     width: 100%;
     justify-content: space-between;
     list-style: none;
     display: flex;
 }
+
 .navbar ul li{
     font-weight: lighter;
 }
+
+/* add style to side bar */
+.sidebar{
+    display: flex;
+    width: 40%;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.sidebar img{
+    height: 50%;
+    gap: 30px;
+    
+}
+
+.sidebar .cart1{
+    padding: 10px;
+    height: 30%;
+}
+
+/* styling the cartitem container */
+
+/* .cartItems{
+    width:100%;
+    height: 300px;
+    border: 1px solid red;
+    opacity: 0;
+} */
