--- a/style.css
+++ b/style.css
@@ -73,3 +73,15 @@
     border: 1px solid red;
     opacity: 0;
 } */
+
+.container{
+    display: flex;
+    height: 85%;
+    width: 90%;
+    justify-content: space-between;
+    margin:auto;
+    border-top:1px solid hsl(223, 64%, 98%) ;
+    
+}
+
+/* style image side */
