add style to the image side

--- a/style.css
+++ b/style.css
@@ -85,3 +85,23 @@
 }
 
 /* style image side */
+.imgSide{
+    width: 50%;
+    height: 100%;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imgSide .imgProduct{
+    height: 70%;
+    width: 80%;
+    /* border: 1px solid green; */
+    margin: auto;
+    border-radius: 10px;
+    /* background: url("./images/image-product-1.jpg"); */
+    /* background-repeat: no-repeat; */
+    
+}
+
