add style to pricing box

--- a/style.css
+++ b/style.css
@@ -148,3 +148,31 @@
     color:hsl(220, 14%, 75%) ;
 }
 
+
+.pricingBox{
+    height: 20%;
+    width: 40%;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    grid-template-areas: "box1 box2" "box3 box3";   
+}
+.box1{
+    grid-area: box1;
+}
+.box2{
+    grid-area: box2;
+    height: 40%;
+    width: 35%;
+    /* border: 1px solid blue; */
+    border-radius: 5px;
+    background-color: hsl(25, 100%, 94%);
+}
+
+
+.box3{
+    grid-area: box3;
+}
+.box3 h4{
+    color: hsl(220, 14%, 75%);
+}
