--- a/style.css
+++ b/style.css
@@ -185,3 +185,14 @@
     justify-content: space-around;
     align-items: flex-end;
 }
+.cartBox{
+    width: 50%;
+    height: 40%;
+    /* border: 1px solid green; */
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: hsl(26, 100%, 55%);
+}
+
